# hex98

./: .gitmodules  README.md
cad/: README.md  hex98.ipynb  hex98.py  pyproject.toml
firmware/kmk/: README.md  boot.py  code.py  compile.sh  kb.py  keyboard.py  main.py
